--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
           <div class="subheading mb-5"> SCOPUS ID: <a href="https://www.scopus.com/authid/detail.uri?origin=resultslist&authorId=57195344702&zone=">57195344702</a> </div> </div>
           </div>
           </div>
-          <p class="lead mb-5">Researcher in Artificial Intelligence in the Department of Computer Science (IDEIAGEOCA) at the Universidad Politécnica Salesiana (UPS), Ecuador. Lecturer in the Department of Mathematics at the Universidad San francisco de Quito (USFQ) and in the Department of Physics and Mathematics at the Universidad de las Américas (UDLA).</p>
+          <p class="lead mb-5">Researcher in Artificial Intelligence in the Department of Computer Science (IDEIAGEOCA) at the Universidad Politécnica Salesiana (UPS), Ecuador. Was lecturer in the Department of Mathematics at the Universidad San francisco de Quito (USFQ) and in the Department of Physics and Mathematics at the Universidad de las Américas (UDLA).</p>
           <div class="social-icons">
             <a href="https://github.com/dievalhu">
               <i class="fab fa-github"></i>
@@ -124,7 +124,7 @@
               <p>Subject Taught: Mathematics for Health Sciences, Inferential Statistics, Integral Calculus and Quantitative Models.</p>
             </div>
             <div class="resume-date text-md-right">
-              <span class="text-primary">October 2016 - Present</span>
+              <span class="text-primary">October 2016 - June 2017</span>
             </div>
           </div>		  
 		  		  
@@ -135,7 +135,7 @@
               <p>Subject Taught: Mathematical Logic, Differential Calculus, Integral Calculus, Vector Physical, Math Propaedeutic and Operations Research.</p>
             </div>
             <div class="resume-date text-md-right">
-              <span class="text-primary">September 2012 - August 2014 / October 2016 - Present</span>
+              <span class="text-primary">September 2012 - August 2014 / October 2016 - April 2017</span>
             </div>
           </div>		  
 
